Basic JAXB schema generation
git-svn-id: svn://svn.caucho.com/resin/trunk@1752 9c94448d-38f1-0310-a231-d98308ff1ebf